[Debug] - Add command to show element to insert

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -23,6 +23,7 @@ jobs:
       run: |
         git config --local user.email "doc.generator3000@github.com"
         git config --local user.name "DocGenerator 3000"
+        git status
         git add docs/
         git commit -m "[Doc] - Update API documentation." 
     - name: Push changes
