--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -24,10 +24,12 @@ jobs:
         git config --local user.email "doc.generator3000@github.com"
         git config --local user.name "DocGenerator 3000"
         git status
+        ls -lah
         git add docs/
         git commit -m "[Doc] - Update API documentation." 
     - name: Push changes
       uses: ad-m/github-push-action@master
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        branch: "gh-pages"
+        branch: 'gh-pages'
+        directory: 'docs/'
