--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -23,7 +23,7 @@ jobs:
       run: |
         git config --local user.email "doc.generator3000@github.com"
         git config --local user.name "DocGenerator 3000"
-        git add docs/
+        git add .
         git commit -m "[Doc] - Update API documentation." 
     - name: Push changes
       uses: ad-m/github-push-action@master
