--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -24,11 +24,10 @@ jobs:
         git config --local user.email "doc.generator3000@github.com"
         git config --local user.name "DocGenerator 3000"
         git status
-        git add .
-        git commit -m "[Doc] - Update API documentation." 
+        git commit -m "[Doc] - Update API documentation." -a
     - name: Push changes
       uses: ad-m/github-push-action@master
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        branch: "gh-pages"
-        directory: "docs"
+        branch: 'gh-pages'
+        directory: 'docs'
