--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -23,9 +23,9 @@ jobs:
       run: |
         git config --local user.email "doc.generator3000@github.com"
         git config --local user.name "DocGenerator 3000"
+        git pull
         cd docs
-        ls
-        git commit -m "[Doc] - Update API documentation." -a
+        git commit -am "[Doc] - Update API documentation."
     - name: Push changes
       uses: ad-m/github-push-action@master
       with:
